--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,5 +1,5 @@
+<div *ngIf="showAlert" class=" custom-alert alert alert-warning" role="alert"> {{ alertMessage }} </div>
 <div class="form-login">
-
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <h2>Iniciar Sesión</h2>
     <div class="form-group">
